@@ -19,6 +19,7 @@ lib/Catalyst/Action/Deserialize/JSON.pm
 lib/Catalyst/Action/Deserialize/View.pm
 lib/Catalyst/Action/Deserialize/XML/Simple.pm
 lib/Catalyst/Action/Deserialize/YAML.pm
+lib/Catalyst/Action/DeserializeMultiPart.pm
 lib/Catalyst/Action/REST.pm
 lib/Catalyst/Action/REST/ForBrowsers.pm
 lib/Catalyst/Action/Serialize.pm
@@ -42,6 +43,7 @@ META.yml
 README
 t/broken/Catalyst/Action/Deserialize/Broken.pm
 t/broken/Catalyst/Action/Serialize/Broken.pm
+t/catalyst-action-deserialize-multipart.t
 t/catalyst-action-deserialize.t
 t/catalyst-action-rest-action-dispatch-for-browsers.t
 t/catalyst-action-rest-action-dispatch.t
@@ -62,6 +64,7 @@ t/lib/Test/Catalyst/Action/REST.pm
 t/lib/Test/Catalyst/Action/REST/Controller/Actions.pm
 t/lib/Test/Catalyst/Action/REST/Controller/ActionsForBrowsers.pm
 t/lib/Test/Catalyst/Action/REST/Controller/Deserialize.pm
+t/lib/Test/Catalyst/Action/REST/Controller/DeserializeMultiPart.pm
 t/lib/Test/Catalyst/Action/REST/Controller/Override.pm
 t/lib/Test/Catalyst/Action/REST/Controller/REST.pm
 t/lib/Test/Catalyst/Action/REST/Controller/Root.pm
