@@ -92,6 +92,8 @@ CONTRIBUTORS
 
     Hans Dieter Pearcey
 
+    Brian Phillips <bphillips@cpan.org>
+
     Dave Rolsky <autarch@urth.org>
 
     Luke Saunders
